# rust_auto_filehandler

./: Cargo.toml  README.md  config.toml
src/: main.rs
