[package]
name = "DiscrepancyDataMovement"
version = "0.1.0"
edition = "2021"

[dependencies]
#sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "mssql"] }
#sqlx = { version = "0.7", features = ["mssql"] }
tokio = { version = "1", features = ["full"] }
walkdir = "2.3"
regex = "1"
chrono = "0.4"
config = "0.13"